Fixed anonymous personal bar spacing with multiple entries. This closes #10743.
svn path=/plonetheme.sunburst/trunk/; revision=37944

--- a/plonetheme/sunburst/skins/sunburst_styles/public.css
+++ b/plonetheme/sunburst/skins/sunburst_styles/public.css
@@ -133,7 +133,6 @@ q {
     color: #205c90;
 }
 
-
 #portal-personaltools {
     float: right;
     background: #e3e3e3;
@@ -152,6 +151,7 @@ q {
 }
 #portal-personaltools #anon-personalbar a {
     float: left;
+    margin-right: 0.5em;
 }
 
 #portal-languageselector {
